Binary Search implementation

--- a/Searching_Sorting_Algo.ipynb
+++ b/Searching_Sorting_Algo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMTxZ/qyffBnn+Y2e7iBOjz",
+      "authorship_tag": "ABX9TyNbyWerNBudNiz832Ltj7jJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "6dT6ruXIw2JA"
       },
@@ -84,7 +84,7 @@
         "id": "3THX9bTUyNFB",
         "outputId": "2c3d7a96-060d-4185-aa9c-08029a31c1c3"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -115,7 +115,7 @@
         "id": "tkvFrQcb02_6",
         "outputId": "5fb300e8-46bf-46d4-e427-1e116108dbdc"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -142,7 +142,7 @@
         "id": "U159ZIVU4RaQ",
         "outputId": "393e20e3-581a-4006-b8c8-820df26ec64c"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -161,6 +161,156 @@
       "source": [],
       "metadata": {
         "id": "BsO6r-8F22ZR"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "FSJJZqBw2Peb"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "x6_mni5s2PS0"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def binary_search(arr, low, high, item):\n",
+        "\n",
+        "  if low <= high:\n",
+        "    #search\n",
+        "    mid = (low+high)//2\n",
+        "    print(f'low: {low}, mid: {mid}, high: {high}')\n",
+        "\n",
+        "    if arr[mid] == item:\n",
+        "      return mid\n",
+        "    elif arr[mid] > item:\n",
+        "      return binary_search(arr, low, mid-1, item)\n",
+        "\n",
+        "    else:\n",
+        "      return binary_search(arr, mid+1, high, item)\n",
+        "\n",
+        "  else:\n",
+        "    return -1\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "NLGWclZR2PQB"
+      },
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = [1,2,4,5,6,7,8,19]\n",
+        "binary_search(a, 0, len(a)-1, 1)"
+      ],
+      "metadata": {
+        "id": "iaKu0lvJ5UvG",
+        "outputId": "97a115b3-6efa-4d52-fe65-0aac289e7c3f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "low: 0, mid: 3, high: 7\n",
+            "low: 0, mid: 1, high: 2\n",
+            "low: 0, mid: 0, high: 0\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def binary_search(arr, item):\n",
+        "  low = 0\n",
+        "  high = len(arr)-1\n",
+        "\n",
+        "  while low <= high:\n",
+        "    mid = (low+high)//2\n",
+        "    print(f'low: {low}, mid: {mid}, high: {high}')\n",
+        "    if arr[mid] == item:\n",
+        "      return mid\n",
+        "    elif arr[mid] > item:\n",
+        "      high = mid-1\n",
+        "    else:\n",
+        "      low = mid+1\n",
+        "  return -1"
+      ],
+      "metadata": {
+        "id": "Zf9LMAnN5_7c"
+      },
+      "execution_count": 11,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = [1,2,4,5,6,7,8,19]\n",
+        "binary_search(a, 2)"
+      ],
+      "metadata": {
+        "id": "x75JdoNZ-RH0",
+        "outputId": "ddb8012c-b996-4e38-a7db-e54a3f34631a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "low: 0, mid: 3, high: 7\n",
+            "low: 0, mid: 1, high: 2\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "9Si4b4ru-S6Z"
       },
       "execution_count": null,
       "outputs": []
