--- a/Searching_Sorting_Algo.ipynb
+++ b/Searching_Sorting_Algo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNbyWerNBudNiz832Ltj7jJ",
+      "authorship_tag": "ABX9TyMmp0QmUXyBD+TZY5T61W6w",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -218,11 +218,11 @@
         "binary_search(a, 0, len(a)-1, 1)"
       ],
       "metadata": {
-        "id": "iaKu0lvJ5UvG",
-        "outputId": "97a115b3-6efa-4d52-fe65-0aac289e7c3f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "iaKu0lvJ5UvG",
+        "outputId": "97a115b3-6efa-4d52-fe65-0aac289e7c3f"
       },
       "execution_count": 10,
       "outputs": [
@@ -275,34 +275,36 @@
       "cell_type": "code",
       "source": [
         "a = [1,2,4,5,6,7,8,19]\n",
-        "binary_search(a, 2)"
+        "binary_search(a, 88)"
       ],
       "metadata": {
-        "id": "x75JdoNZ-RH0",
-        "outputId": "ddb8012c-b996-4e38-a7db-e54a3f34631a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "x75JdoNZ-RH0",
+        "outputId": "e43ba7f0-b034-4a96-e6bb-16600bb9e40a"
       },
-      "execution_count": 13,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "low: 0, mid: 3, high: 7\n",
-            "low: 0, mid: 1, high: 2\n"
+            "low: 4, mid: 5, high: 7\n",
+            "low: 6, mid: 6, high: 7\n",
+            "low: 7, mid: 7, high: 7\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "1"
+              "-1"
             ]
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 16
         }
       ]
     },
@@ -310,7 +312,43 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
+        "id": "dq0gBQsqAcGs"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "6yqPNcQ3Af0v"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "ww43umF_AgCi"
+      },
+      "execution_count": 25,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
         "id": "9Si4b4ru-S6Z"
+      },
+      "execution_count": 27,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "YQqDGlJ-A8KB"
       },
       "execution_count": null,
       "outputs": []
