--- a/Searching_Sorting_Algo.ipynb
+++ b/Searching_Sorting_Algo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMmp0QmUXyBD+TZY5T61W6w",
+      "authorship_tag": "ABX9TyOOPUNxqZ+FbHWHlPKU+Sv8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -173,6 +173,20 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Binary Search by Recursion\n",
+        "\n",
+        "\n",
+        "*   Time Complex ->\n",
+        "*   Space Comaples ->\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "e3gyWPMuwLCf"
+      }
     },
     {
       "cell_type": "code",
