--- a/Searching_Sorting_Algo.ipynb
+++ b/Searching_Sorting_Algo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOOPUNxqZ+FbHWHlPKU+Sv8",
+      "authorship_tag": "ABX9TyPslqRrT7iC9erUpV+PcdP3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -205,7 +205,7 @@
         "  if low <= high:\n",
         "    #search\n",
         "    mid = (low+high)//2\n",
-        "    print(f'low: {low}, mid: {mid}, high: {high}')\n",
+        "    #print(f'low: {low}, mid: {mid}, high: {high}')\n",
         "\n",
         "    if arr[mid] == item:\n",
         "      return mid\n",
@@ -262,6 +262,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Binary Search by"
+      ],
+      "metadata": {
+        "id": "rvTcYgAbwxnv"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "def binary_search(arr, item):\n",
@@ -270,7 +279,7 @@
         "\n",
         "  while low <= high:\n",
         "    mid = (low+high)//2\n",
-        "    print(f'low: {low}, mid: {mid}, high: {high}')\n",
+        "    #print(f'low: {low}, mid: {mid}, high: {high}')\n",
         "    if arr[mid] == item:\n",
         "      return mid\n",
         "    elif arr[mid] > item:\n",
@@ -323,22 +332,63 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Bubble Sort\n",
+        "\n",
+        "\n",
+        "*   Time Complex -> o(n^2) - in worst case\n",
+        "*   Space Comaples -> 1\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "rbXQTOZ0wncl"
+      }
+    },
+    {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "def bubble_sort(arr):\n",
+        "  for i in range(len(arr)- 1):\n",
+        "    print(i)\n",
+        "    for j in range(len(arr) - 1 - i):\n",
+        "      print(j)\n",
+        "      if arr[j] > arr[j+1]:\n",
+        "        arr[j], arr[j+1] = arr[j+1], arr[j]\n",
+        "  return arr"
+      ],
       "metadata": {
         "id": "dq0gBQsqAcGs"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "a = [1,2,33,56,8922,5,6,7,8,19]\n",
+        "bubble_sort(a)"
+      ],
       "metadata": {
-        "id": "6yqPNcQ3Af0v"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6yqPNcQ3Af0v",
+        "outputId": "35583d5a-0b39-4e68-a8df-fb533bd2b4a4"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, 2, 5, 6, 7, 8, 19, 33, 56, 8922]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
     },
     {
       "cell_type": "code",
