--- a/Py_Basic.ipynb
+++ b/Py_Basic.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPSpZlVhBIv1U6y1o+r8O4D",
+      "authorship_tag": "ABX9TyOCSlWLFxEcft/4ZIZq/gL/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,6 +41,29 @@
       ],
       "metadata": {
         "id": "JdlH09-EmOEM"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "= Assignment operator\n",
+        "\n",
+        "+= Addition assignment\n",
+        "\n",
+        "-= Subtraction assignment\n",
+        "\n",
+        "*= Multiplication assignment\n",
+        "\n",
+        "/= Division assignment\n",
+        "\n",
+        "//= Floor division assignment\n",
+        "\n",
+        "%= Remainder assignment\n",
+        "\n",
+        "**= Exponent assignment"
+      ],
+      "metadata": {
+        "id": "0zA4B9Bdrnw3"
       }
     },
     {
@@ -84,10 +107,10 @@
       ],
       "metadata": {
         "id": "2LHS__RuqXDI",
-        "outputId": "7253111b-068c-4fde-eec1-5554353c22c9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "7253111b-068c-4fde-eec1-5554353c22c9"
       },
       "execution_count": 1,
       "outputs": [
@@ -113,11 +136,11 @@
         "[item for item in range(101) if item % 10 == 0]"
       ],
       "metadata": {
-        "id": "R6FVzTH6ytOO",
-        "outputId": "76ddd341-ce30-4daf-b2fb-41f26e7f581d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "R6FVzTH6ytOO",
+        "outputId": "76ddd341-ce30-4daf-b2fb-41f26e7f581d"
       },
       "execution_count": 6,
       "outputs": [
@@ -145,12 +168,12 @@
         "cleanWord(word)"
       ],
       "metadata": {
-        "id": "4EuIl44m0t9O",
-        "outputId": "099a7805-0521-4319-c3d7-9ba9a558f77e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "id": "4EuIl44m0t9O",
+        "outputId": "099a7805-0521-4319-c3d7-9ba9a558f77e"
       },
       "execution_count": 9,
       "outputs": [
@@ -175,11 +198,11 @@
         "[i for i in word.split()]"
       ],
       "metadata": {
-        "id": "ggSFLB2l164r",
-        "outputId": "9fa7ed20-0d06-4030-b21e-1c48ec739b48",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ggSFLB2l164r",
+        "outputId": "9fa7ed20-0d06-4030-b21e-1c48ec739b48"
       },
       "execution_count": 10,
       "outputs": [
@@ -201,11 +224,11 @@
         "[cleanWord(i) for i in word.split()]"
       ],
       "metadata": {
-        "id": "JzarH_f82gj6",
-        "outputId": "8f918d6a-8eaf-4256-d32f-38ed4b770499",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "JzarH_f82gj6",
+        "outputId": "8f918d6a-8eaf-4256-d32f-38ed4b770499"
       },
       "execution_count": 11,
       "outputs": [
@@ -227,11 +250,11 @@
         "[cleanWord(word) for word in word.split() if len(cleanWord(word)) > 3]"
       ],
       "metadata": {
-        "id": "drNo56-p2mJV",
-        "outputId": "d331b60c-a242-4179-f9de-f6414db80bbc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "drNo56-p2mJV",
+        "outputId": "d331b60c-a242-4179-f9de-f6414db80bbc"
       },
       "execution_count": 13,
       "outputs": [
@@ -256,11 +279,11 @@
         "\n"
       ],
       "metadata": {
-        "id": "aQoolrZ33AiP",
-        "outputId": "cec4f4b6-0324-474d-df36-4439ee6d0fc7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "aQoolrZ33AiP",
+        "outputId": "cec4f4b6-0324-474d-df36-4439ee6d0fc7"
       },
       "execution_count": 20,
       "outputs": [
@@ -277,13 +300,465 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "# If statements with \"FizzBuzz\""
+      ],
       "metadata": {
-        "id": "1BwKX3OF4EvN"
+        "id": "1QHxgHSV-jJm"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "for n in range(1, 20):\n",
+        "    if n % 15 == 0:\n",
+        "        print('FizzBuzz')\n",
+        "    elif n % 3 == 0:\n",
+        "        print('Fizz')\n",
+        "    elif n % 5 == 0:\n",
+        "        print('Buzz')\n",
+        "    else:\n",
+        "        print(n)"
+      ],
+      "metadata": {
+        "collapsed": true,
+        "id": "0cS_5k7N-i8P",
+        "outputId": "761f6580-825b-4b7e-d832-eeb1bd497d6a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "2\n",
+            "Fizz\n",
+            "4\n",
+            "Buzz\n",
+            "Fizz\n",
+            "7\n",
+            "8\n",
+            "Fizz\n",
+            "Buzz\n",
+            "11\n",
+            "Fizz\n",
+            "13\n",
+            "14\n",
+            "FizzBuzz\n",
+            "16\n",
+            "17\n",
+            "Fizz\n",
+            "19\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Single Line if statements\n",
+        "n = 10\n",
+        "'Fizz' if n % 2 == 0 else 'No Prime'"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "1BwKX3OF4EvN",
+        "outputId": "515925da-2a13-4c6b-d9d7-30d8e0dc190a"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Fizz'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 25
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "'Fizz' if n % 3 == 0 else 'Buzz' if n % 5 == 0 else n"
+      ],
+      "metadata": {
+        "id": "CPxXWPN2_HMB",
+        "outputId": "2c818144-d588-4dc5-d9b6-e469d2da6204",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Buzz'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 26
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "'FizzBuzz' if n % 15 == 0 else 'Fizz' if n % 3 == 0 else 'Buzz' if n % 5 == 0 else n"
+      ],
+      "metadata": {
+        "id": "MGub-V7n_a8L",
+        "outputId": "bbe0035a-faf7-4e5f-f414-55b5edf3692b",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Buzz'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 27
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "['FizzBuzz' if n % 15 == 0 else 'Fizz' if n % 3 == 0 else 'Buzz' if n % 5 == 0 else n for n in range(1, 21)]"
+      ],
+      "metadata": {
+        "id": "aroqh5II_c2B",
+        "outputId": "4f7a283b-52a4-4e73-abec-edfbe9de943f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1,\n",
+              " 2,\n",
+              " 'Fizz',\n",
+              " 4,\n",
+              " 'Buzz',\n",
+              " 'Fizz',\n",
+              " 7,\n",
+              " 8,\n",
+              " 'Fizz',\n",
+              " 'Buzz',\n",
+              " 11,\n",
+              " 'Fizz',\n",
+              " 13,\n",
+              " 14,\n",
+              " 'FizzBuzz',\n",
+              " 16,\n",
+              " 17,\n",
+              " 'Fizz',\n",
+              " 19,\n",
+              " 'Buzz']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 29
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Dict Comprehension\n",
+        "Dict comprehension is a concise way to create dictionaries in Python. It is similar to list comprehensions but works with dictionaries. Instead of creating a dictionary through multiple lines of loops and conditional statements, dict comprehension allows you to define the same logic in a single line of code, making your code cleaner and more efficient.\n",
+        "\n",
+        "# Syntax\n",
+        "{key_expression: value_expression for item in iterable if condition}\n",
+        "\n",
+        "key_expression: Expression for the key.\n",
+        "\n",
+        "value_expression: Expression for the value.\n",
+        "\n",
+        "item: Each element in the iterable.\n",
+        "\n",
+        "iterable: A collection (like a list or range) that you loop through.\n",
+        "\n",
+        "condition (optional): A filter condition."
+      ],
+      "metadata": {
+        "id": "denpNOxbkrc1"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Creating a Dictionary from a List\n",
+        "\n",
+        "You can create a dictionary from a list of numbers where the key is the number and the value is the square of the number."
+      ],
+      "metadata": {
+        "id": "4GuMrw4HlQ5c"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numbers = [1, 2, 3, 4, 5]\n",
+        "squares = {num: num ** 2 for num in numbers}\n",
+        "print(squares)"
+      ],
+      "metadata": {
+        "id": "7aQdUjKI_iTC",
+        "outputId": "53a6b5ea-33d2-49a9-8a9a-913b91e9df07",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{1: 1, 2: 4, 3: 9, 4: 16, 5: 25}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Filtering Items\n",
+        "\n",
+        "You can also filter items while creating a dictionary. For example, if you want only even numbers and their squares in the dictionary:"
+      ],
+      "metadata": {
+        "id": "DEGs21qTlTRL"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "even_squares = {num: num ** 2 for num in numbers if num % 2 == 0}\n",
+        "print(even_squares)"
+      ],
+      "metadata": {
+        "id": "ffmhpq26k1nu",
+        "outputId": "1d5e58b3-d105-4523-a624-ae7ab633e536",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{2: 4, 4: 16}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "{i:i*2 for i in range(1,21) if i%2==0}"
+      ],
+      "metadata": {
+        "id": "zqa7xsLGlZtj",
+        "outputId": "3253cdc8-6d00-4c35-8b66-5a31e62c648e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{2: 4, 4: 8, 6: 12, 8: 16, 10: 20, 12: 24, 14: 28, 16: 32, 18: 36, 20: 40}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Set Comprehension\n",
+        "Set comprehension in Python is a concise way to create sets using a single line of code. Similar to list and dict comprehensions, set comprehension allows you to generate sets from an iterable while applying transformations or filtering conditions.\n",
+        "\n",
+        "\n",
+        "\n",
+        "## Syntax\n",
+        "\n",
+        "The syntax for set comprehension is:\n",
+        "\n",
+        "{expression for item in iterable if condition}\n"
+      ],
+      "metadata": {
+        "id": "GN5x_wI-mrpp"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "even_numbers = {num for num in numbers if num % 2 == 0}\n",
+        "print(even_numbers)"
+      ],
+      "metadata": {
+        "id": "K0gfv1N3l-32",
+        "outputId": "6f4f1e6b-e5bf-45f7-dd85-f744b936187b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{2, 4}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Base Conversion\n",
+        "Base Conversion in Python\n",
+        "In Python, base conversion refers to the process of converting numbers from one base (like binary, decimal, or hexadecimal) to another. Python provides built-in functions to handle these conversions easily.\n",
+        "\n",
+        "\n",
+        "\n",
+        "## Common Number Systems\n",
+        "Decimal (Base 10): The standard number system we use in everyday life, using digits from 0 to 9.\n",
+        "\n",
+        "Binary (Base 2): Used in computer systems, consisting of only 0s and 1s.\n",
+        "\n",
+        "Octal (Base 8): Less commonly used, but includes digits from 0 to 7.\n",
+        "\n",
+        "Hexadecimal (Base 16): Commonly used in programming, with digits from 0-9 and letters A-F representing values from 10 to 15.\n",
+        "\n",
+        "\n",
+        "\n",
+        "## Converting from Decimal to Other Bases\n",
+        "To convert from decimal to other bases, Python provides functions like:\n",
+        "\n",
+        "bin(): Converts a decimal number to binary (base 2).\n",
+        "\n",
+        "oct(): Converts a decimal number to octal (base 8).\n",
+        "\n",
+        "hex(): Converts a decimal number to hexadecimal (base 16).\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "LLpMb1XzqgLQ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num = 25\n",
+        "\n",
+        "# Convert to binary\n",
+        "print(bin(num))  # Output: 0b11001\n",
+        "\n",
+        "# Convert to octal\n",
+        "print(oct(num))  # Output: 0o31\n",
+        "\n",
+        "# Convert to hexadecimal\n",
+        "print(hex(num))  # Output: 0x19\n",
+        "\n",
+        "#The prefixes 0b, 0o, and 0x indicate binary, octal, and hexadecimal numbers respectively."
+      ],
+      "metadata": {
+        "id": "GYCBNWtDm5TH",
+        "outputId": "09f528e6-6199-4ee4-d4c5-97814ea7364e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0b11001\n",
+            "0o31\n",
+            "0x19\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "binary_str = \"11001\"\n",
+        "octal_str = \"31\"\n",
+        "hex_str = \"19\"\n",
+        "\n",
+        "# Convert from binary, octal, and hexadecimal to decimal\n",
+        "print(int(binary_str, 2))  # Output: 25\n",
+        "print(int(octal_str, 8))   # Output: 25\n",
+        "print(int(hex_str, 16))    # Output: 25"
+      ],
+      "metadata": {
+        "id": "mUNxbfeYq0WH",
+        "outputId": "520cf652-de6a-482a-fd10-711844727ea4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "25\n",
+            "25\n",
+            "25\n"
+          ]
+        }
+      ]
     }
   ]
 }
